add change listener to textInput
it invokes per every click, but doesn't invoke Ajax event handler in Java code

--- a/src/main/java/mypackage/HomePage.html
+++ b/src/main/java/mypackage/HomePage.html
@@ -9,6 +9,11 @@
                 $("#testField").val("12345");
                 $("#testField").triggerHandler("change");
             });
+            
+            
+            $("#testField").change(function(){
+                console.log("change");
+            });
         });
     </script>
 </head>
